tdf#85435 sw: No longer clear AddExtLeading for doc files with grid

This change removes a problematic workaround from the doc importer,
which was clearing the AddExtLeading compatibility flag for any doc file
containing a document grid.

The original intention for this workaround was to fix tdf#129808. At
some point, the workaround was disabled by inverting the value assigned
to the compatibility flag. Unfortunately, either way causes unfortunate
side effects.

Since tdf#129808 is now fixed elsewhere, this workaround no longer
serves any apparent purpose.

Change-Id: Ice46f1473916b072e183010f8888f6be62761bb3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173695
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>